2004-06-27  Michael Gogins <gogins@pipeline.com>

	* Fixed (and simplified) real-time audio input.

2004-06-25  Michael Gogins <gogins@pipeline.com>

	* The CsoundVST Python module now prints Csound messages to Python
	sys.stdout when running in IDLE.

2004-06-25  Anthony Kozar <anthony.kozar@utoledo.edu>

	* These are all changes to allow compilation on MacOS 9
	
	* Top/csound.c:  In declaration of csoundExternalMidiRead(), made mbuf
	 unsigned char* to match other calls.

	* OOps/diskin.c: (newsndinset) changed if (sinfd > 0) to 
	if (sinfd != NULL).

	* Top/dl_opcodes.c: added #else case for platforms without shared 
	libraries.

	* InOut/libsnd.c: added #include "MacTransport.h" for Mac builds.

	* Top/main.c: commented out conditional exclusion of err_printf() for Mac.

	* OOps/sdif-mem.c:
	* SDIF/sdif-mem.c:
	* H/sdif-mem.h:
	* SDIF/sdif-mem.h:
	* OOps/sdif.c:
	* SDIF/sdif.c: changed #include <H/sdif-mem.h> to #include 
	"H/sdif-mem.h" and <H/sdif.h> to "H/sdif.h".

	* H/sftype.h: #defined PACKED for mac_classic

	* H/sysdep.h: undefined mills_macintosh (now defined in Prefix.h) and
	temporarily undefined RTAUDIO for Mac build until PortAudio working.

2004-06-15  John ffitch  <jpff@codemist.co.uk>

	* OOps/aops.c (outo): Skipped +6 case!

2004-06-12  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (ftkrchk): 
	* OOps/ugrw1.c: Results of some opcodes were reporting errors
	incorrectly 

2004-06-07  Michael Gogins <gogins@pipeline.com>

	* Changed the CsoundVST module to create a global csound instance of 
	CsoundVST.CppSound that will work both in CsoundVST and in the
	standalone Python interpreter.

2004-06-02  Michael Gogins <gogins@pipeline.com>

	* CsoundVST now opens the Python or csd file given on the command line.

2004-05-31  John ffitch  <jpff@codemist.co.uk>

	* OOps/midirecv.c: declare csoundIsExternalMidiEnabled,
	csoundExternalMidiDeviceOpen, csoundExternalMidiDeviceClose and
	OpenMIDIDevice external
